--- a/src/pages/docs/00-config/01-pallete.astro
+++ b/src/pages/docs/00-config/01-pallete.astro
@@ -2,12 +2,13 @@
 import Layout from "../../../layouts/Layout.astro";
 import ColorDemo from "../../../components/docs/ColorDemo.astro";
 
-const title = "Paleta de colores";
+const title = "Color Palette";
 ---
 
 <Layout title={title}>
   <section class="w-max center padd">
-    <h2>Paleta de colores</h2>
+    <h2>Color Palette</h2>
+    <i>@ID:<b> #00-01-01</b></i>
     <div class="separator-v-xl"></div>
     <div class="col-row">
       <div>
