--- a/src/pages/docs/00-config/02-typography.astro
+++ b/src/pages/docs/00-config/02-typography.astro
@@ -2,12 +2,13 @@
 import Layout from "../../../layouts/Layout.astro";
 import TextDemo from "../../../components/docs/TextDemo.astro";
 
-const title = "Tipografía";
+const title = "Typography";
 ---
 
 <Layout title={title}>
   <section class="w-max center padd">
-    <h2>Tipografía</h2>
+    <h2>Typography</h2>
+    <i>@ID:<b> #00-02-01</b></i>
     <div class="separator-v-xl"></div>
     <div class="col">
       <div>
