--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,33 +8,49 @@
       <div class="">
         <h5>Enlaces</h5>
         <ul>
-          <li><a href="/">00-config</a></li>
-          <li class="marg-lf-s"><a href="/docs/01-config/01-pallete">- Paleta</a></li>
-            <li class="marg-lf-s"><a href="/docs/01-config/02-typography">- Tipografía</a></li>
+          <li>00-config</li>
+          <li class="marg-lf-s">
+            <a href="/docs/00-config/01-pallete">- Paleta</a>
+          </li>
+          <li class="marg-lf-s">
+            <a href="/docs/00-config/02-typography">- Tipografía</a>
+          </li>
+          <li class="marg-lf-s">
+            <a href="/docs/00-config/03-theme">- Theme</a>
+          </li>
+          <li class="marg-lf-s">
+            <a href="/docs/00-config/04-measures">- Measures</a>
+          </li>
+             <li>01-text</li>
+            <li class="marg-lf-s">
+              <a href="/docs/01-text/01-fonts">- Fonts</a>
+            </li>
+            <li class="marg-lf-s">  
+              <a href="/docs/01-text/02-typography">- Typography</a>
         </ul>
+        <div class="">
+          <h5>Redes Sociales</h5>
+          <ul>
+            <li><a href="#">Facebook</a></li>
+            <li><a href="#">Twitter</a></li>
+            <li><a href="#">Instagram</a></li>
+          </ul>
+        </div>
+        <div class="">
+          <ul>
+            <li><a href="/">Dashboard</a></li>
+            <li><a href="/profile">Perfil</a></li>
+            <li><a href="/settings">Configuración</a></li>
+            <li><a href="/notifications">Notificaciones</a></li>
+            <li><a href="/messages">Mensajes</a></li>
+            <li><a href="/help">Ayuda</a></li>
+            <li><a href="/docs/01-config/01-pallete">Paleta</a></li>
+          </ul>
+        </div>
       </div>
-      <div class="">
-        <h5>Redes Sociales</h5>
-        <ul>
-          <li><a href="#">Facebook</a></li>
-          <li><a href="#">Twitter</a></li>
-          <li><a href="#">Instagram</a></li>
-        </ul>
+      <div class="padd-xl">
+        <p>© 2025 Todos los derechos reservados</p>
       </div>
-      <div class="">
-        <ul>
-          <li><a href="/">Dashboard</a></li>
-          <li><a href="/profile">Perfil</a></li>
-          <li><a href="/settings">Configuración</a></li>
-          <li><a href="/notifications">Notificaciones</a></li>
-          <li><a href="/messages">Mensajes</a></li>
-          <li><a href="/help">Ayuda</a></li>
-          <li><a href="/docs/01-config/01-pallete">Paleta</a></li>
-        </ul>
-      </div>
-    </div>
-    <div class="padd-xl">
-      <p>© 2025 Todos los derechos reservados</p>
     </div>
   </div>
 </footer>
