--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -27,6 +27,9 @@
             </li>
             <li class="marg-lf-s">  
               <a href="/docs/01-text/02-typography">- Typography</a>
+            </li>
+            <li class="marg-lf-s">
+              <a href="/docs/id-table">- ID Table</a>
         </ul>
         <div class="">
           <h5>Redes Sociales</h5>
