--- a/src/pages/docs/00-config/03-theme.astro
+++ b/src/pages/docs/00-config/03-theme.astro
@@ -118,5 +118,37 @@ const title = "Theme";
         </div>
       </div>
     </div>
+    <div class="separator-v-xl"></div>
+    <h3>Shadows</h3>
+    <div class="col">
+      <div class="row jc-sb ai-c min-h-10">
+        --shadow-s
+        <div
+          class="marg-lf"
+          style="width: 60px; height: 40px; border-radius: 6px; background: #fff; box-shadow: var(--shadow-s);"
+        ></div>
+      </div>
+      <div class="row jc-sb ai-c min-h-10">
+        --shadow-md
+        <div
+          class="marg-lf"
+          style="width: 60px; height: 40px; border-radius: 6px; background: #fff; box-shadow: var(--shadow-md);"
+        ></div>
+      </div>
+      <div class="row jc-sb ai-c min-h-10">
+        --shadow-l
+        <div
+          class="marg-lf"
+          style="width: 60px; height: 40px; border-radius: 6px; background: #fff; box-shadow: var(--shadow-l);"
+        ></div>
+      </div>
+      <div class="row jc-sb ai-c min-h-10">
+        --shadow-inner
+        <div
+          class="marg-lf"
+          style="width: 60px; height: 40px; border-radius: 6px; background: #fff; box-shadow: var(--shadow-inner);"
+        ></div>
+      </div>
+    </div>
   </section>
 </Layout>
